fix sale z-index (5)

--- a/src/styles/productcard.css
+++ b/src/styles/productcard.css
@@ -61,7 +61,7 @@
   font-weight: 400;
   line-height: 14px;
   position: relative;
-  z-index: 20;
+  z-index: 5;
   top: -44px;
   font-family: "Roboto";
   font-size: 14px;
